fix: update image source and enhance top text styling for better visibility

--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,16 @@ p {
 }
 
 .beta-text,
-.subheading {
+.subheading,
+.top-text {
     text-transform: uppercase;
+}
+
+.top-text {
+    font-size: 0.875rem;
+    font-weight: 900;
+    padding-top: 0.25em;
+    border-top: 5px solid;
 }
 
 .fine-print {
@@ -87,19 +95,45 @@ p {
 /* =================
     Form
    ================= */
-input{
+
+input,
+button {
     font-family: inherit;
     width: 100%;
-    padding: 0.5em;
-    margin-bottom: 0.75em;
-    border: 2px solid #d1d5db;
     border-radius: 5px;
 }
 
-input:focus{
+input {
+    padding: 0.5em;
+    margin-bottom: 0.75em;
+    border: 2px solid #d1d5db;
+}
+
+input:focus {
     outline: none;
-    background-color: #e6e8ec;
     border-color: #8a71ec;
+    background-color: #e6e8ec;
+}
+
+.btn {
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: 1px;
+    padding: 1em 0;
+    border: none;
+    cursor: pointer;
+}
+
+.btn-primary {
+    color: white;
+    background-color: #8a71ec;
+    margin-top: 1em;
+
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+    background-color: #b7a7f6;
 }
 
 /* =================
